--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,6 +21,6 @@ jobs:
           EOF
           chmod 600 .env
 
-          docker compose up -d --build
+          docker-compose up -d --build
           
           docker ps
